refactor: remove workspace domain